--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,4 @@ code {
 a{ 
   text-decoration: none;
 }
+html { margin-right: -calc(100vw - 100%); }
